# contralog

./: CHANGELOG.md  LICENSE  contralog.cabal
.github/workflows/: haskell.yml
src/System/Log/: Contra.hs
src/System/Log/Contra/: Class.hs  Internal.hs  Message.hs  Severity.hs
test/: Main.hs
