cabal-version:      2.4
name:               contralog
version:            0.1.0.0
synopsis:           Logging framework

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            ISC
license-file:       LICENSE
author:             Valdson Francisco Silva Santos Júnior
maintainer:         valdsonfrancisco.jr@gmail.com

-- A copyright notice.
-- copyright:
category:           System
extra-source-files: CHANGELOG.md

common shared
    ghc-options:
        -Wall
        -Wunused-packages
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
    build-depends:    base ^>=4.16.4.0
    default-language: Haskell2010


library
    import:           shared
    exposed-modules:
        System.Log.Contra,
        System.Log.Contra.Class

    -- Modules included in this library but not exported.
    other-modules:
        System.Log.Contra.Internal,
        System.Log.Contra.Severity,
        System.Log.Contra.Message

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        unordered-containers, transformers
    hs-source-dirs:   src

test-suite contralog-test
    import:           shared
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    contralog, hspec