cabal-version:      2.4
name:               contralog
version:            0.1.0.0
synopsis:           a simple logging library based on co-log

-- A longer description of the package.
description: 
    This highly experimental logging library is based on co-log's notion of contravariant logging
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            ISC
license-file:       LICENSE
author:             Valdson Francisco Silva Santos Júnior
maintainer:         valdsonfrancisco.jr@gmail.com

-- A copyright notice.
-- copyright:
category:           System
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/Valdsonjr/contralog

common shared
    ghc-options:
        -Wall
        -Wunused-packages
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
    build-depends:    base ^>=4.16.4.0
    default-language: Haskell2010


library
    import:           shared
    exposed-modules:
        System.Log.Contra,
        System.Log.Contra.Class

    -- Modules included in this library but not exported.
    other-modules:
        System.Log.Contra.Internal,
        System.Log.Contra.Severity,
        System.Log.Contra.Message

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        mtl                  >= 2.2.2 && < 2.3,
        unordered-containers >= 0.2.19 && < 0.3    
    hs-source-dirs:   src

test-suite contralog-test
    import:           shared
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    contralog, hspec
